--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,21 +2,23 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # every day at midnight
+    - cron: "0 0 * * *"  # every day at midnight UTC
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+    name: Generate GitHub Contribution Snake
     steps:
-      - uses: Platane/snk@v3
+      - name: Generate SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: chinni-03
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push to output branch
+      - name: Push to the `output` branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
