--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,15 +2,14 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # every day at midnight UTC
+    - cron: "0 0 * * *" # every day at midnight
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-    name: Generate GitHub Contribution Snake
     steps:
-      - name: Generate SVG
+      - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: chinni-03
@@ -18,7 +17,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push to the `output` branch
+      - name: Commit snake to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
